<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.otp.OtpActivity"
    android:background="@color/secondary1">

    <ImageView
        android:id="@+id/background_shape1"
        android:layout_width="438dp"
        android:layout_height="403dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/background_shape"
        android:src="@drawable/ellipse_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/background_shape2"
        android:layout_width="438dp"
        android:layout_height="403dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="448dp"
        android:contentDescription="@string/background_shape"
        android:src="@drawable/ellipse_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/onboarding_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        app:srcCompat="@drawable/logo_aja_budayakita" />


    <TextView
        android:id="@+id/welcome_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_to_budayaku"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo" />

    <TextView
        android:id="@+id/desc_regist"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/desc_otp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_regist" />



    <EditText
        android:id="@+id/edOtpEmail"
        android:background="@drawable/background_input_layout"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:paddingStart="20dp"
        android:hint="@string/enter_your_email"
        android:fontFamily="@font/poppins_medium"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/desc_regist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="35dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edOtpCode"
        android:background="@drawable/background_input_layout"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:paddingStart="20dp"
        android:hint="@string/enter_your_otp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/edOtpEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/verify"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/edOtpCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="35dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
