<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.explore.LoadingExploreFragment"
    android:background="@color/secondary1">

    <ImageView
        android:id="@+id/background_login_shape1"
        android:layout_width="438dp"
        android:layout_height="403dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/background_shape"
        android:src="@drawable/ellipse_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/background_login_shape2"
        android:layout_width="438dp"
        android:layout_height="403dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-32dp"
        android:contentDescription="@string/background_shape"
        android:src="@drawable/ellipse_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/loading_image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/image_loading"
        android:src="@drawable/garuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main" />

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/onboarding_logo"
        android:src="@drawable/logo_budayakita_gabungan_panjang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/loading_teks"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loading_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
