<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_login_shape1"
        android:layout_width="438dp"
        android:layout_height="403dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/background_shape"
        android:src="@drawable/ellipse_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/background_login_shape2"
        android:layout_width="438dp"
        android:layout_height="403dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-32dp"
        android:layout_marginBottom="448dp"
        android:contentDescription="@string/background_shape"
        android:src="@drawable/ellipse_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/onboarding_logo"
        android:src="@drawable/logo_budayakita_gabungan_panjang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_notifikasi"
        android:layout_width="18dp"
        android:layout_height="21dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/notifkasi_icon"
        android:src="@drawable/ic_notif"
        app:layout_constraintBottom_toTopOf="@+id/title_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/title_main"
        android:layout_width="374dp"
        android:layout_height="97dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tittle_dimain"
        android:textColor="@color/red"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main" />

    <SearchView
        android:id="@+id/search_main"
        android:layout_width="377dp"
        android:layout_height="54dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/background_input_layout"
        android:queryHint="Search Here..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_main" />

    <TextView
        android:id="@+id/rekomendasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/rekomendasi"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_main" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <com.qamar.curvedbottomnaviagtion.CurvedBottomNavigation
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:cbn_background="@color/secondary1"
        app:cbn_curve_radius="26dp"
        app:cbn_fabColor="@color/red"
        app:cbn_height="76dp"
        app:cbn_iconColor="@color/neutral_600"
        app:cbn_icon_size="24dp"
        app:cbn_selectedIconColor="@color/white"
        app:cbn_selected_icon_size="48dp"
        app:cbn_titleColor="@color/neutral_600"
        app:cbn_titleFont="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rekomendasi"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>